force-app/main/default/objects/DD_Product_Attribute__c/DD_Product_Attribute__c.object-meta.xml
<CustomObject>
    <description>Junction linking attribute definitions to products with master default values</description>
    <label>Product Attribute</label>
    <nameField><displayFormat>PA-{00000}</displayFormat><label>PA ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Product Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>