force-app/main/default/objects/DD_Product_Attribute__c/fields/Attribute_Definition__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Definition__c</fullName>
    <label>Attribute Definition</label>
    <type>Lookup</type>
    <referenceTo>DD_Attribute_Definition__c</referenceTo><relationshipLabel>Product Attributes</relationshipLabel><relationshipName>Product_Attrs_Def</relationshipName><required>true</required>
    <description>Attribute definition</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>