force-app/main/default/objects/DD_Product_Attribute__c/fields/Is_Overridable__c.field-meta.xml
<CustomField>
    <fullName>Is_Overridable__c</fullName>
    <label>Overridable at Quote</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Can agents override at quote time</description>
</CustomField>