force-app/main/default/objects/DD_Product_Attribute__c/fields/Override_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Override_Constraints__c</fullName>
    <label>Override Constraints</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON: min, max, allowed values for overrides</description>
</CustomField>