force-app/main/default/objects/DD_Product_Attribute__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>DD_Product__c</referenceTo><relationshipLabel>Product Attributes</relationshipLabel><relationshipName>Product_Attributes</relationshipName><required>true</required>
    <description>Parent product</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>